# AGI_VOICE

./: .CarMaker.tcl  .env.example  .gitignore  ARCHITECTURE.md  BACKEND_REVIEW.md  CHAT_SYSTEM_ENHANCEMENT_PLAN.md  CLAUDE.md  DESIGN_AUDIT.md  IMPLEMENTATION_PLAN.md  LICENSE  RAG_INTEGRATION_PLAN.md  README.md  frontend-style-review.md  import_maps.js  package-lock.json  package.json  start.bat  svelte.config.js  vite.config.js
CarMaker_RealtimeControl/: INTEGRATION_PLAN.md  LLM_AUTO_CONTROL_SPEC.md  MIGRATION_PLAN.md  README.md  README_ARCHITECTURE.md  SOCKET_CONTROL_README.md  carmaker_client.py  carmaker_control_server.py  carmaker_gui.py  carmaker_llm_control.py  cm_cli.py  example_commands.txt  llm_agent_example.py  llm_claude_integration.py  llm_integration.py  llm_triggers.json  scenario_accel_decel.bat  scenario_accel_decel.sh  test_batch_dvaread.py  test_duration_reset.py  test_llm_integration.py  test_massive_batch_dvaread.py
MapGenerator/: README_RAG.md  ai_prompt_example.txt  build_all_embeddings.py  crossroad.edg.xml  crossroad.nod.xml  embed_map.py  map_descriptions.txt  merge_lane.edg.xml  merge_lane.nod.xml  rag_gui.py  rag_system.py  requirements.txt  search_maps.py  straight_road.edg.xml  straight_road.nod.xml  t_junction.edg.xml  t_junction.nod.xml  test_api.py  three_lane_road.edg.xml  three_lane_road.nod.xml  y_junction.edg.xml  y_junction.net.xml  y_junction.nod.xml
Paper_AGI_KSAE202601/: 4.2026KSAESpringFullPaperFormKOR.hwp  5.2026KSAESpringFullPaperFormKOR.docx  Fig_ControlInput.eps  Fig_ControlInput.fig  Fig_Trajectory.eps  Fig_Trajectory.fig  Fig_VehicleResponse.eps  Fig_VehicleResponse.fig  KSAE202601.aux  KSAE202601.bbl  KSAE202601.blg  KSAE202601.tex  (+6 more)
rust_test/: .gitignore  Cargo.toml  README.md
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_carmaker.rs  test_control.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: claude_cli.rs  embeddings.rs  mod.rs  prompt_builder.rs
src-tauri/src/carmaker/: client.rs  mod.rs  types.rs
src-tauri/src/commands/: ai_chat.rs  carmaker_control.rs  characters.rs  command_templates.rs  common.rs  conversations.rs  dashboard.rs  exercises.rs  maps.rs  meals.rs  missions.rs  mod.rs  prompt_templates.rs  settings.rs  triggers.rs  utils.rs  weights.rs
src-tauri/src/db/: map_db.rs  mod.rs  schema.rs  seed_data.rs  sync.rs
src-tauri/src/db/models/: ai_mission.rs  character.rs  command_template.rs  conversation.rs  exercise.rs  map.rs  map_scenario.rs  meal.rs  message.rs  mod.rs  prompt_template.rs  weight.rs
src-tauri/src/triggers/: mod.rs  state.rs  types.rs
v3/services/python-api/: README.md  pyproject.toml
v3/services/python-api/app/: __init__.py  main.py
v3/services/python-api/app/api/: router.py
v3/services/python-api/app/api/routes/: __init__.py  carmaker.py  characters.py  chat.py  command_templates.py  conversations.py  health.py  maps.py  prompt_templates.py  settings.py  triggers.py
v3/services/python-api/app/core/: config.py
v3/services/python-api/app/schemas/: ai_catalog.py  carmaker.py  chat.py  command_templates.py  conversations.py  maps.py  settings.py  triggers.py
v3/services/python-api/app/services/: ai_catalog.py  ai_chat_db.py  carmaker.py  chat.py  command_templates.py  maps.py  settings.py  triggers.py
(+208 files in other folders)
