[package]
name = "agi_voice_v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agi_voice_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
sea-orm = { version = "1.1.17", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "5.0"

# Development profile optimizations for faster builds
[profile.dev]
# Optimize dependencies but not our code (much faster rebuilds)
opt-level = 1
incremental = true

[profile.dev.package."*"]
# Optimize all dependencies
opt-level = 3

# Release profile
[profile.release]
# Maximum optimizations for release builds
opt-level = 3
lto = true
codegen-units = 1
strip = true
