[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-voice-v3-python-api"
version = "0.1.0"
description = "Python backend service for AGI Voice V3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uvicorn]
factory = false
